--- a/packages/jest-config/package.json
+++ b/packages/jest-config/package.json
@@ -12,6 +12,7 @@
     "jest-validate": "^24.8.0"
   },
   "dependencies": {
+    "@types/jest": "^24.0.12",
     "babel-jest": "^24.8.0",
     "empty": "^0.10.1",
     "jest": "^24.8.0"
